objects/Kavitha_test__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nvidia_Demo__c</fullName>
        <label>Nvidia Demo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text1__c</fullName>
        <label>Text1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text2__c</fullName>
        <label>Text2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Kavitha test</label>
    <nameField>
        <label>Kavitha test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kavitha tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>